--- a/config/models.yml
+++ b/config/models.yml
@@ -67,9 +67,9 @@ info:
   #     Fast: 3
   #     Cheap: 3
 
-  dalle-2:
+  dalle-3:
      type: image
-     price_per_1_image: 0.018  # 512x512
+     price_per_1_image: 0.04  # Standard 1024×1024
 
   whisper:
     type: audio
